Name:          dcpu16-hs
Version:       0.0.0.1
Synopsis:      Implementation of Notch's dcpu-16 CPU in Haskell
Homepage:      https://github.com/jaspervdj/dcpu16-hs
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Development
Build-type:    Simple
Cabal-version: >= 1.2

Executable dcpu16-emulator
  Ghc-options:    -Wall -fwarn-tabs
  Hs-source-dirs: src
  Main-is:        Emulator/Main.hs
  
  Other-modules:       
    Emulator
    Emulator.Monad
    Emulator.Monad.ST
    Instruction
    Memory
    Util

  Build-depends:       
    base       >= 4   && < 5,
    bytestring >= 0.9 && < 0.10,
    ghc-prim   >= 0.2 && < 0.3,
    mtl        >= 2.0 && < 2.1

Executable dcpu16-assembler
  Ghc-options:    -Wall -fwarn-tabs
  Hs-source-dirs: src
  Main-is:        Assembler/Main.hs
  
  Other-modules:       
    Assembler
    Assembler.Parser
    Instruction
    Memory

  Build-depends:       
    base          >= 4   && < 5,
    blaze-builder >= 0.3 && < 0.4,
    bytestring    >= 0.9 && < 0.10,
    containers    >= 0.3 && < 0.5,
    parsec        >= 3.1 && < 3.2

Test-suite dcpu16-tests
  Ghc-options:    -Wall -fwarn-tabs
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Type:           exitcode-stdio-1.0

  Build-depends:
    HUnit                >= 1.2 && < 1.3,
    containers           >= 0.3 && < 0.5,
    test-framework       >= 0.4 && < 0.7,
    test-framework-hunit >= 0.2 && < 0.3,
    -- Copied from regular dependencies...
    base          >= 4   && < 5,
    blaze-builder >= 0.3 && < 0.4,
    bytestring    >= 0.9 && < 0.10,
    containers    >= 0.3 && < 0.5,
    ghc-prim      >= 0.2 && < 0.3,
    mtl           >= 2.0 && < 2.1,
    parsec        >= 3.1 && < 3.2
